--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -1,20 +1,8 @@
 \section{Experimental Setup}
 
-In this section we describe the particular experimental parameters used.
+In this section we describe the experimental parameters used.
 
 \subsection{OpenCL Systems}
-
-\begin{table*}[t!]
-  \footnotesize %
-  \centering %
-  % \rowcolors{2}{white}{gray!25}
-  \input{build/tab/platforms}
-  \caption{%
-    OpenCL systems and the number of bug reports submitted to date. For each system, two testbeds are created, one with compiler optimizations, the other without.%
-    \vspace{-.5em}
-  }
-  \label{tab:platforms}
-\end{table*}
 
 We conducted testing of 10 OpenCL systems, summarized in Table~\ref{tab:platforms}.  We covered a broad range of hardware: 3 GPUs, 4 CPUs, a co-processor, and an emulator. 7 of the compilers tested are commercial products, 3 of them are open source. Our suite of systems includes both combinations of different drivers for the same device, and different devices using the same driver.
 
