Update on Overleaf.

--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -408,11 +408,11 @@ The results emphasize that compiler validation is a moving target. Every change 
 
 \subsection{Extensibility of Language Model}
 
-\cc{This is still in note form, needs shaping:} A large portion of the DeepSmith architecture is language-agnostic, requiring only a corpus, encoder, and harness for each new language. This potentially significantly lowers the barrier to entry compared with prior grammar-based fuzzers. To explore this, we report on initial results in extending DeepSmith to the Solidty programming language.  Solidity is the smart contract programming language of the Ethereum blockchain. At less than four years old, it lacks much of the tooling of more established programming languages. Yet, it is an important candidate for rigorous testing, as exploitable bugs could lead to fraudulent transactions.
+A large portion of the DeepSmith architecture is language-agnostic, requiring only a corpus, encoder, and harness for each new language. This potentially significantly lowers the barrier to entry compared with prior grammar-based fuzzers. To explore this, we report on initial results in extending DeepSmith to the Solidty programming language.  Solidity is the smart contract programming language of the Ethereum blockchain. At less than four years old, it lacks much of the tooling of more established programming languages. Yet, it is an important candidate for rigorous testing, as exploitable bugs could lead to fraudulent transactions.
 
-\paragraph{Testing Methodology} Followed same methodology as OpenCL. Assembled corpus from scraped solidity files on GitHub. Recursively inlined imported modules. Used same language keywords/character tokenizer. Enforced code formatting through clangformat. Trained model in the same manner as OpenCL. The language model and generator code is identical to OpenCL. Simple compile-only test harness.
+\paragraph{Testing Methodology} Followed same methodology as OpenCL. Assembled corpus from scraped solidity files on GitHub. Recursively inlined imported modules. Used same language keywords/character tokenizer (only the keywords are different from OpenCL). Code formatting enforced through clangformat. Trained model in the same manner as OpenCL. The language model and generator code is identical to OpenCL. Simple compile-only test harness.
 
-\paragraph{Initial Results} Ran generator+harness loop for 12 hours on four testbeds: reference compiler \texttt{solc} with optimizations on or off, and \texttt{solc-js}, which is an Emscripten compiled version of the \texttt{solc} compiler. Found three distinct compiler crashes: %
+\paragraph{Initial Results} Ran generator+harness loop for 12 hours on four testbeds: reference compiler \texttt{solc} with optimizations on or off, and \texttt{solc-js}, which is an Emscripten compiled version of the \texttt{solc} compiler. See Table~\ref{tab:solidity} Found three distinct compiler crashes: %
 %
 one caused by missing error handling of language features (known to developers).
 % Unimplemented feature: FixedPointType
