--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -105,8 +105,8 @@ machine learning has been successfully applied before on areas such as improving
 \bottomrule
 \end{tabular}
 	\caption{%
-		Crash rate of Solidity compilers from 12 hours of testing using DeepSmith.%
-        \vspace{-1em}
+		The number of DeepSmith programs trigger Solidity compiler crashes from 12 hours of testing.%
+     \vspace{-1em}
 	}
 	\label{tab:solidity}
 \end{table}
