--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -110,6 +110,7 @@ We employ established Differential Testing methodologies to expose compiler defe
 		OpenCL systems and the number of bug reports submitted to date. For each system, two testbeds are created, one with compiler optimizations, the other without.%
 		\vspace{-.5em}
 	}
+  \vspace{-1.8em}
 	\label{tab:platforms}
 \end{table*}
 
