--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -12,6 +12,7 @@ The random generation of test cases is a well established approach to the compil
 	\caption{%
 		Crash rate of the Clang front-end of every LLVM release in the past 24 months compiling 75k DeepSmith kernels.
 	}%
+  \vspace{-0.8em}
 	\label{fig:clangs} %
 \end{figure}
 \begin{table}
@@ -20,8 +21,8 @@ The random generation of test cases is a well established approach to the compil
 	\input{build/tab/clang-assert-counts}
 	\caption{%
 		The number of DeepSmith programs which trigger distinct Clang front-end assertions, and the number of programs which trigger unreachables.%
-        \vspace{-2em}
 	}
+  \vspace{-2.1em}
 	\label{tab:clangs}
 \end{table}
 
@@ -105,9 +106,10 @@ machine learning has been successfully applied before on areas such as improving
 \bottomrule
 \end{tabular}
 	\caption{%
-		The number of DeepSmith programs trigger Solidity compiler crashes from 12 hours of testing.%
+		The number of DeepSmith programs that trigger Solidity compiler crashes from 12 hours of testing.%
      \vspace{-1em}
 	}
+   \vspace{-2em}
 	\label{tab:solidity}
 \end{table}
 
