Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -11953,9 +11953,9 @@
 }
 
 @inproceedings{Danaee2016,
-    title = {{A Deep Learning Approach for Cancer Detection and Relevant Gene Identification.}},
+    title = {{A Deep Learning Approach for Cancer Detection and Relevant Gene Identification}},
     year = {2017},
-    booktitle = {Pacific Symposium on Biocomputing},
+    booktitle = {PSB},
     author = {Danaee, P. and Ghaeini, R. and Hendrix, D. A.},
     keywords = {cancer detection, classification, deep learning, dimensionality reduction, rna-seq expression, stacked denoising autoencoder}
 }
@@ -12450,6 +12450,43 @@
     year = {2017},
     journal = {arXiv:1710.07740},
     author = {Wang, X. and Dillig, I. and Singh, R.}
+}
+
+@article{Ashouri,
+    title = {{A Survey on Compiler Autotuning using Machine Learning}},
+    journal = {arXiv:1801.04405},
+    author = {Ashouri, A. H. and Killian, W. and Cavazos, J. and Palermo, G. and Silvano, C.}
+}
+
+@article{Silva2018,
+    title = {{Environment for integration of distributed heterogeneous computing systems}},
+    year = {2018},
+    journal = {JISA},
+    author = {Silva, T. W. B. and Morais, D. C. and Andrade, H. G. R. and Lima, A. M. N. and Melcher, E. U. K. and Brito, A. V.},
+    number = {1},
+    volume = {9},
+    publisher = {Journal of Internet Services and Applications},
+    keywords = {Distributed computing,Heterogeneous computing,Midd, distributed computing, heterogeneous computing, middleware}
+}
+
+@article{Chang2006,
+    title = {{Bigtable: A distributed storage system for structured data}},
+    year = {2006},
+    journal = {OSDI},
+    author = {Chang, F. and Dean, J. and Ghemawat, S. and Hsieh, W. C. and Wallach, D. A. and Burrows, M. and Chandra, T. and Fikes, A. and Gruber, R. E.},
+    url = {http://research.google.com/archive/bigtable-osdi06.pdf},
+    isbn = {1931971471},
+    doi = {10.1145/1365815.1365816},
+    issn = {07342071},
+    arxivId = {arXiv:1011.1669v3}
+}
+
+@article{Bottinger2018,
+    title = {{Deep Reinforcement Fuzzing}},
+    year = {2018},
+    author = {B{\"{o}}ttinger, Konstantin and Godefroid, Patrice and Singh, Rishabh},
+    url = {http://arxiv.org/abs/1801.04589},
+    arxivId = {1801.04589}
 }
 
 @article{2017FindingTesting,
