--- a/abstract.tex
+++ b/abstract.tex
@@ -20,6 +20,7 @@ submitting \factcheck{67} bug reports.
 %
 Our test cases are on average two orders of magnitude smaller than the state-of-the-art, require $3.03\times$ less time to generate and evaluate, and expose bugs which the state-of-the-art cannot. Our random program generator, comprising only \factcheck{500} lines of code, took 12 hours to train for OpenCL versus the state-of-the-art taking 9 man months to port from a generator for C and 50,000 lines of code.
 % find CLSmith/src -name '*.cpp' -o '*.h' | xargs wc -l  # 49775
+\hl{Is it worth talking about the Solidity work?}\am{To demonstrate the portability of our approach we also undertook an initial experiment applying DeepSmith to the Solidity language, uncovering several compiler crashes.}
 
 %Compilers should produce correct code for valid inputs, and produce meaningful errors when inputs are invalid. Fixed test-suites and formal verification techniques cannot ensure these properties over the enormous range of possible inputs and complexity of optimizing compilers, leading to the development of random program generators that attempt to find compiler bugs by comparing the outputs of programs across compilers.
 
