--- a/lst/samples.tex
+++ b/lst/samples.tex
@@ -547,7 +547,7 @@
 \begin{lrbox}{\ParserFailOne}
   \hspace{1.5em}
   \begin{lstlisting}
-    void A(){(global a*)()
+    void A(){(global a*)()}
   \end{lstlisting}
 \end{lrbox}
 
@@ -555,7 +555,7 @@
 \begin{lrbox}{\ParserFailTwo}
   \hspace{1.5em}
   \begin{lstlisting}
-    void A(){void* a; uint4 b=0; b=(b>b)?a:a
+    void A(){void* a; uint4 b=0; b=(b>b)?a:a}
   \end{lstlisting}
 \end{lrbox}
 
@@ -563,7 +563,7 @@
 \begin{lrbox}{\ParserFailThree}
   \hspace{1.5em}
   \begin{lstlisting}
-    void A(){double2 k; return (float4)(k,k,k,k)
+    void A(){double2 k; return (float4)(k,k,k,k)}
   \end{lstlisting}
 \end{lrbox}
 
