--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -37,7 +37,7 @@ Equivalence Modulo Inputs (EMI) testing~\cite{Le2013a,Sun2016a} follows a differ
 Skeletal program enumeration~\cite{Zhang2017a} again works by transforming existing code. It identifies algorithmic patterns in short pieces of code and enumerates all the possible permutations of variable usage.
 % \cc{TODO: no testing of invalid inputs, unclear if scales to complex programs.}
 
-\hl{\paragraph{Test-case Reduction}?} With both generation and mutation based approaches, bug-exposing programs can be unnecessarily long. While 80\% of the test cases related to GCC and LLVM bugs are 45 lines~\cite{Sun2016} or less, CSmith/EMI output tends to be thousands of lines long. Most this code is not related to the bug and has to be removed for compiler engineers to understand the source of the problem. To that end test case reduction techniques~\cite{Regehr2012a,Pflanzer2016,Herfert} have been developed to bring the code down to manageable lengths. These techniques are very slow, potentially taking several hours to reduce a single test case. Automated reducers also require extensive engineering effort, applying analyses at every stage of the iterative reduction process so as not to obscure the bug-exposing property of interest. Another common problem is prioritizing the most important bugs out of the hundreds or thousands discovered. This \emph{fuzz taming problem} is addressed in~\cite{Chen2013}, in which a distance metric is used to rank test cases such that diverse, interesting test cases are highly ranked. % \cc{TODO: Our approach complements EMI}
+\paragraph{Test case Reduction} With both generation and mutation based approaches, bug-exposing programs can be unnecessarily long. While 80\% of the test cases related to GCC and LLVM bugs are 45 lines~\cite{Sun2016} or less, CSmith/EMI output tends to be thousands of lines long. Most this code is not related to the bug and has to be removed for compiler engineers to understand the source of the problem. To that end test case reduction techniques~\cite{Regehr2012a,Pflanzer2016,Herfert} have been developed to bring the code down to manageable lengths. These techniques are very slow, potentially taking several hours to reduce a single test case. Automated reducers also require extensive engineering effort, applying analyses at every stage of the iterative reduction process so as not to obscure the bug-exposing property of interest. Another common problem is prioritizing the most important bugs out of the hundreds or thousands discovered. This \emph{fuzz taming problem} is addressed in~\cite{Chen2013}, in which a distance metric is used to rank test cases such that diverse, interesting test cases are highly ranked. % \cc{TODO: Our approach complements EMI}
 
 Compared to all these, our fuzzing approach is low cost, easy to develop, portable, capable of detecting a wide range of errors, and focusing by design on bugs that are more likely to be encountered in a production scenario.
 
@@ -101,11 +101,13 @@ machine learning has been successfully applied before on areas such as improving
 \midrule
   \multirow{ 2}{*}{solc} & $-$ & 204 & 1 & \\
                          & $+$ & 204 & 1 & \\
+  \hline
   \multirow{ 2}{*}{solc-js} & $-$ & 3628 & 1 & 1\\
                          & $+$ & 908 & 1 & 1\\
 \bottomrule
 \end{tabular}
 	\caption{%
+		% Results from 12 hours of testing Solidity compilers using DeepSmith.
 		The number of DeepSmith programs that trigger Solidity compiler crashes from 12 hours of testing.%
      \vspace{-1em}
 	}
